--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Jeff's Pizza</title>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="pizza.js.js"></script>
+    <link rel="stylesheet" href="pizza.css">
 </head>
 <body>
 
