--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <title>Jeff's Pizza</title>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="pizza.js.js"></script>
+    <script src="pizza.js"></script>
     <link rel="stylesheet" href="pizza.css">
 </head>
 <body>
 
-    <h1>Jeff's Pizza</h1>
+    <h1>Jeff's Pizzeria</h1>
+
+    <div id="wrapper">
+        <header>
+            <span class=""></span>
+        </header>
+    </div>
 
 </body>
 </html>
