--- a/index.html
+++ b/index.html
@@ -126,7 +126,23 @@
                     <br>
 
                     <h3>Order Total:</h3>
-                    <p id="totalOutput"></p>
+                    <table>
+                        <tr>
+                            <td id="subtotalOutput"></td>
+                        </tr>
+
+                        <tr>
+                            <td id="salesTaxOutput"></td>
+                        </tr>
+
+                        <tr>
+                            <td id="deliveryFeeOutput"></td>
+                        </tr>
+
+                        <tr>
+                            <td id="totalOutput"></td>
+                        </tr>
+                    </table>
 
                     <button id="submitOrder">Submit</button>
 
