--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
                         <tr>
                             <td id="totalOutput"></td>
                         </tr>
+
+                        <tr>
+                            <td id="thanks"></td>
+                        </tr>
                     </table>
 
                     <button id="submitOrder">Submit</button>
