--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         </tr>
                     </table>
 
-                    <button id="submitOrder">Submit</button>
+                    <button id="submitOrder">Place Order</button>
 
                 </div>
             </div>
